# alsa-lib

./: Makefile.in  aclocal.m4  alsa-lib_1.0.10.orig.tar.gz.delta  alsa-lib_1.0.10.orig.tar.gz.id  alsa-lib_1.0.11.orig.tar.gz.delta  alsa-lib_1.0.11.orig.tar.gz.id  alsa-lib_1.0.13.orig.tar.gz.delta  alsa-lib_1.0.13.orig.tar.gz.id  alsa-lib_1.0.14.orig.tar.gz.delta  alsa-lib_1.0.14.orig.tar.gz.id  alsa-lib_1.0.15.orig.tar.gz.delta  alsa-lib_1.0.15.orig.tar.gz.id  alsa-lib_1.0.16.orig.tar.gz.delta  alsa-lib_1.0.16.orig.tar.gz.id  alsa-lib_1.0.17a.orig.tar.gz.delta  alsa-lib_1.0.17a.orig.tar.gz.id  alsa-lib_1.0.18.orig.tar.gz.delta  alsa-lib_1.0.18.orig.tar.gz.id  alsa-lib_1.0.19.orig.tar.gz.delta  alsa-lib_1.0.19.orig.tar.gz.id  alsa-lib_1.0.20.orig.tar.gz.delta  alsa-lib_1.0.20.orig.tar.gz.id  alsa-lib_1.0.21a.orig.tar.gz.delta  alsa-lib_1.0.21a.orig.tar.gz.id  alsa-lib_1.0.22.orig.tar.bz2.delta  alsa-lib_1.0.22.orig.tar.bz2.id  alsa-lib_1.0.22.orig.tar.gz.delta  alsa-lib_1.0.23.orig.tar.bz2.delta  alsa-lib_1.0.23.orig.tar.bz2.id  alsa-lib_1.0.24.1.orig.tar.bz2.delta  alsa-lib_1.0.24.1.orig.tar.bz2.id  alsa-lib_1.0.25.orig.tar.bz2.delta  alsa-lib_1.0.25.orig.tar.bz2.id  alsa-lib_1.0.5.orig.tar.gz.delta  alsa-lib_1.0.5.orig.tar.gz.id  alsa-lib_1.0.8.orig.tar.gz.delta  alsa-lib_1.0.8.orig.tar.gz.id  alsa-lib_1.0.9.orig.tar.gz.delta  alsa-lib_1.0.9.orig.tar.gz.id  alsa-lib_1.1.0.orig.tar.bz2.delta  (+5 more)
debian/: NOTES  (+42 more)
src/conf/ucm/: Makefile.am  Makefile.in
src/conf/ucm/LENOVO-20QD00LKIX-ThinkPadX1Carbon7th-20QD00LKIX/: Makefile.am
src/conf/ucm/LENOVO-BIOSID-N2H/: Makefile.am
(+443 files in other folders)
