SUBDIRS=DAISY-I2S PandaBoard PandaBoardES SDP4430 tegraalc5632 PAZ00 GoogleNyan HDAudio-Lenovo-DualCodecs broadwell-rt286 skylake-rt286 VEYRON-I2S chtrt5645 DB410c Dell-WD15-Dock apq8064-tabla-snd-card Tuna tegra-rt5640 Manta-I2S Manta-SPDIF msm8974-taiko-mtp-snd-card sof-skl_hda_card LENOVO-20QE000VMC-ThinkPadX1Carbon7th-20QE000VMC LENOVO-20QESITR05-ThinkPadX1Carbon7th-20QESITR05 LENOVO-20UB0SIT17-ThinkPadX1YogaGen5-20UB0SIT17 LENOVO-MFG_IN_GO-ThinkPad-MFG_IN_GO
